--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <app-header></app-header>
 
-<main>
-  <app-travel-packages></app-travel-packages>
+<main style="flex: 1;">
+  <router-outlet></router-outlet>
+  
 </main>
 
 <app-footer></app-footer>
