Refactor: Reorganize homepage structure

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,32 +1,30 @@
 <footer class="footer-custom text-white pt-4 pb-1">
-  <div class="container text-center text-md-start">
-    <div class="row align-items-start">
+  <section class="footer-content">
+    
+    <!-- Coluna Esquerda -->
+    <section class="footer-left">
+      <img src="assets/homepage/viajAvaLogoSVG.svg" alt="Logo da ViaJava" class="footer-logo mb-3">
+      <p>O Café é por nossa conta!</p>
+    </section>
 
-      <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mb-4">
-        <img src="assets/homepage/viajAvaLogoSVG.svg" alt="Logo da ViaJava" class="footer-logo mb-3">
-        <p>O Café é por nossa conta!</p>
-      </div>
+    <!-- Coluna Central -->
+    <section class="footer-center">
+      <h6 class="text-uppercase fw-bold mb-3">Baixe nosso aplicativo</h6>
+      <a href="#">
+        <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg"
+             alt="Baixar na App Store" height="40">
+      </a>
+      <a href="#">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Google_Play_Store_badge_EN.svg/1200px-Google_Play_Store_badge_EN.svg.png"
+             alt="Disponível no Google Play" height="40">
+      </a>
+    </section>
 
-      <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-4">
-        <h6 class="text-uppercase fw-bold mb-4">Baixe nosso aplicativo</h6>
-
-        <div class="d-flex flex-row align-items-center align-items-md-start gap-2">
-          <div>
-            <a href="#"><img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg"
-                alt="Baixar na App Store" height="40"></a>
-          </div>
-          <div>
-            <a href="#"><img
-                src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Google_Play_Store_badge_EN.svg/1200px-Google_Play_Store_badge_EN.svg.png"
-                alt="Disponível no Google Play" height="40"></a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-        <p class="mb-2">2025 ViaJava.</p>
-        <p>Todos os direitos reservados.</p>
-        <div class="mt-4">
+    <!-- Coluna Direita -->
+    <section class="footer-right">
+      <p class="mb-2">2025 ViaJava.</p>
+      <p>Todos os direitos reservados.</p>
+      <div class="mt-4">
           <a href="#" class="social-icon">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-instagram"
               viewBox="0 0 16 16">
@@ -49,7 +47,7 @@
             </svg>
           </a>
         </div>
-      </div>
-    </div>
-  </div>
+    </section>
+
+  </section>
 </footer>
