--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg fixed-top">
+<nav class="navbar">
   <div class="container">
     <a class="navbar-brand" href="#">
       <strong class="text-white">ViaJava</strong>
