--- a/src/styles.css
+++ b/src/styles.css
@@ -2,13 +2,14 @@
 
 /* Variáveis de cor para uso em todo o projeto */
 :root {
-  --primary-orange: #FF7700;
+  --primary-orange: #FF5615;
+  --secondary-orange: #E02200;
   --dark-blue: #1F2937;
   --light-gray: #f8f9fa;
   --text-color: #4a4a4a;
 }
 
-body {
+body , HTML{
   font-family: 'Poppins', sans-serif;
   background-color: var(--light-gray);
   color: var(--text-color);
