--- a/src/app/components/primary-input/primary-input.component.html
+++ b/src/app/components/primary-input/primary-input.component.html
@@ -1,17 +1,17 @@
 <div class="input-wrapper">
-    <label [for]="inputName">{{ label }}</label>
-    <div class="input-content">
-        <input 
-        [type]="type"
-        [placeholder]="placeholder"
-        [value]="value"
-        (input)="onInput($event)"
-
-    
-        />
-        <div class="icon">
-            <ng-content></ng-content>
-
-        </div>
+  <label [for]="inputName">{{ label }}</label>
+  <div class="input-content">
+    <input 
+      [type]="type"
+      [placeholder]="placeholder"
+      [name]="inputName"               
+      [value]="value"
+      (input)="onInput($event)"
+      (blur)="onTouched()"              
+      [disabled]="isDisabled"        
+    />
+    <div class="icon">
+      <ng-content></ng-content>
     </div>
+  </div>
 </div>
