feat: ajustes na pag login signup e forgot, ajustes no service e criado o auth service

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,8 @@
 
 /* Variáveis de cor para uso em todo o projeto */
 :root {
-  --primary-orange: #FF7700;
+  --primary-orange: #FF5615;
+  --secondary-orange: #E02200;
   --dark-blue: #1F2937;
   --light-gray: #f8f9fa;
   --text-color: #4a4a4a;
