--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -26,7 +26,7 @@
           <div ngbDropdownMenu class="dropdown-menu-end">
             <div class="px-3 py-2 text-muted">Bem vindo, {{ currentUser.name }}</div>
             <div class="dropdown-divider"></div>
-            <button ngbDropdownItem>Meu perfil</button>
+            <button ngbDropdownItem routerLink="/perfil">Meu perfil</button>
             <button ngbDropdownItem>Minhas reservas</button>
             <div class="dropdown-divider"></div>
             <button ngbDropdownItem (click)="onLogout()">Sair</button>
@@ -44,8 +44,8 @@
           <div ngbDropdownMenu class="dropdown-menu-end">
             <div class="px-3 py-2 text-muted">Bem vindo, {{ currentUser.name }}</div>
             <div class="dropdown-divider"></div>
-            <button ngbDropdownItem>Meu perfil</button>
-            <button ngbDropdownItem routerLink="/admin-dashboard">Painel Administrativo</button>
+            <button ngbDropdownItem routerLink="/perfil">Meu perfil</button>
+            <button ngbDropdownItem routerLink="/admin-dashboard" routerLink="/admin">Painel Administrativo</button>
             <div class="dropdown-divider"></div>
             <button ngbDropdownItem (click)="onLogout()">Sair</button>
           </div>
