--- a/src/app/components/package-card/package-card.component.html
+++ b/src/app/components/package-card/package-card.component.html
@@ -1,16 +1,16 @@
 <div class="card h-100 border-0 shadow-sm package-card">
-  <img [src]="pacote.imagem" class="card-img-top" [alt]="pacote.titulo">
+  <img [src]="pacote.imageUrl" class="card-img-top" [alt]="pacote.title">
   <div class="card-body">
-    <h5 class="card-title fw-bold">{{ pacote.titulo }}</h5>
+    <h5 class="card-title fw-bold">{{ pacote.title }}</h5>
     <p class="card-text text-muted small">
-      <span class="me-3">📍 {{ pacote.localizacao }}</span>
-      <span>🗓️ {{ pacote.duracao }}</span>
+      
+  
     </p>
-    <p class="card-text description-text">{{ pacote.descricao }}</p>
+    <p class="card-text description-text">{{ pacote.description }}</p>
   </div>
   <div class="card-footer bg-transparent border-0 pt-0 pb-3">
     <div class="d-flex justify-content-between align-items-center">
-      <span class="text-muted small">⭐ ({{ pacote.reviews }} review)</span>
+      
       <a [routerLink]="['/pacote', pacote.id]" class="fw-bold text-decoration-none details-link">Ver Mais +</a>
     </div>
   </div>
