--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,12 @@
 </main>
 
 <app-footer></app-footer>
+
+<app-chat-icon *ngIf="!isChatOpen" (onClick)="toggleChat()"></app-chat-icon>
+
+<app-chatbot
+  *ngIf="isChatOpen"
+  [isOpen]="isChatOpen"
+  [packages]="availablePackages"
+  (onClose)="toggleChat()">
+</app-chatbot>
