--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -12,7 +12,7 @@
                 placeholder="exemplo@email.com">
                 <img src="/assets/icons/email.svg" />
             </app-primary-input>
-            <app-primary-input formControlName="senha" inputName="senha" type="password" label="Senha">
+            <app-primary-input formControlName="password" inputName="password" type="password" label="Senha">
                 <img src="/assets/icons/chave2.svg" />
             </app-primary-input>
 
