--- a/src/app/components/package-card-chat/package-card-chat.component.html
+++ b/src/app/components/package-card-chat/package-card-chat.component.html
@@ -7,5 +7,10 @@
       <span class="package-price">R$ {{ pack.price.toFixed(2) }}</span>
       <span class="package-spots">{{ pack.travelerLimit }} vagas</span>
     </div>
+      <div class="card-footer bg-transparent border-0 pt-0 pb-3">
+      <div class="d-flex justify-content-between align-items-center">
+        <a [routerLink]="['/pacote', pack.id]" class="fw-bold text-decoration-none details-link">Ver Mais +</a>
+      </div>
+    </div>
   </div>
 </div>
