endpoints de recuperação de senha

--- a/src/app/pages/reset-password/reset-password.component.html
+++ b/src/app/pages/reset-password/reset-password.component.html
@@ -4,7 +4,7 @@
   primaryBtnText="Redefinir Senha"
   secondaryBtnText="Voltar ao Login"
   [disablePrimaryBtn]="!resetPasswordForm.valid"
-  (submit)="submit()"
+  (submit)="onSubmit()"
   (navigate)="navigateToLogin()"
 >
   <form [formGroup]="resetPasswordForm">
